--- a/index.html
+++ b/index.html
@@ -4,99 +4,101 @@
 
 <head>
 
-  <meta charset="UTF-8">
-  <title>Train Tracker</title>
+    <meta charset="UTF-8">
+    <title>Train Tracker</title>
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-  <!-- Firebase Reference -->
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
 
-  <!-- Moment.js Reference -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <!-- Moment.js Reference -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body>
 
-  <!-- Train Tracker -->
-  <div class="container">
+    <!-- Train Tracker -->
+    <div class="container">
 
-    <!-- Jumbotron -->
-    <div class="jumbotron">
-      <h1 class="text-center">Train Time Choo Choo</h1>
-      <h5 class="text-center">Tick tock.  Choo choo 'nough said.</h5>
-    </div>
-
-    <div class="row">
-
-      <div class="col-md-12">
-
-        <!-- Current Trains-->
-        <div class="card mb-4">
-          <div class="card-header">Current Train Schedule</div>
-          <div class="card-body">
-            <table class="table table-sm table-hover" id='train-table'>
-              <thead>
-                <tr>
-                  <th scope="col">Train Name</th>
-                  <th scope="col">Destination</th>
-                  <th scope="col">Frequency (min)</th>
-                  <th scope="col">Next Arrival</th>
-                  <th scope="col">Minutes Away</th>
-                </tr>
-              </thead>
-              <tbody>
-              </tbody>
-            </table>
-          </div>
+        <!-- Jumbotron -->
+        <div class="jumbotron">
+            <h1 class="text-center">Train Time Choo Choo</h1>
+            <h5 class="text-center">Tick tock. Choo choo 'nough said.</h5>
         </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <!-- Add Train  -->
-        <div class="card mb-4">
-          <div class="card-header">Add Train</div>
-          <div class="card-body">
+        <div class="row">
 
-            <!-- Entry Form -->
-            <form>
-              <div class="form-group">
-                <label for="train-name-input">Train Name</label>
-                <input class="form-control" id="train-name-input" placeholder="Polar Express" type="text">
-              </div>
-              <div class="form-group">
-                <label for="destination-input">Destination</label>
-                <input class="form-control" id="destination-input" placeholder="North Pole" type="text">
-              </div>
-              <div class="form-group">
-                <label for="start-input">First Train Time (HH:mm - military time)</label>
-                <input class="form-control" id="start-input" placeholder="23:59" type="text">
-              </div>
-              <div class="form-group">
-                <label for="rate-input">Frequency (min)</label>
-                <input class="form-control" id="rate-input" placeholder="15" type="text">
-              </div>
-              <button class="btn btn-custom float-right" id="add-train-btn">Submit</button>
-            </form>
+            <div class="col-md-12">
 
-          </div>
+                <!-- Current Trains-->
+                <div class="card mb-4">
+                    <div class="card-header">Current Train Schedule</div>
+                    <div class="card-body">
+                        <table class="table table-sm table-hover" id='train-table'>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Train Name</th>
+                                    <th scope="col">Destination</th>
+                                    <th scope="col">Frequency (min)</th>
+                                    <th scope="col">Next Arrival</th>
+                                    <th scope="col">Minutes Away</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <!-- Add Train  -->
+                <div class="card mb-4">
+                    <div class="card-header">Add Train</div>
+                    <div class="card-body">
+
+                        <!-- Entry Form -->
+                        <form>
+                            <div class="form-group">
+                                <label for="train-name-input">Train Name</label>
+                                <input class="form-control" id="train-name-input" placeholder="Polar Express" type="text">
+                            </div>
+                            <div class="form-group">
+                                <label for="destination-input">Destination</label>
+                                <input class="form-control" id="destination-input" placeholder="North Pole" type="text">
+                            </div>
+                            <div class="form-group">
+                                <label for="start-input">First Train Time (HH:mm - military time)</label>
+                                <input class="form-control" id="start-input" placeholder="23:59" type="text">
+                            </div>
+                            <div class="form-group">
+                                <label for="rate-input">Frequency (min)</label>
+                                <input class="form-control" id="rate-input" placeholder="15" type="text">
+                            </div>
+                            <button class="btn btn-custom float-left" id="add-train-btn">Submit</button>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
-  </div>
-
-  <!-- JavaScript -->
-  <script src="assets/javascript/choochoomf.js"></script>
+    <!-- JavaScript -->
+    <script src="assets/javascript/choochoomf.js"></script>
 
 </body>
 
