Adjusted jumbotron text and top margin.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="container">
 
         <!-- Jumbotron -->
-        <div class="jumbotron">
-            <h1 class="text-center">Train Time Choo Choo</h1>
-            <h5 class="text-center">Tick tock. Choo choo 'nough said.</h5>
+        <div class="jumbotron mt-4">
+            <h1 class="text-center">Train Schedule</h1>
+            <h5 class="text-center">Tick tock. Choo choo!</h5>
         </div>
 
         <div class="row">
